# tock

./: Cargo.toml
boards/configurations/nrf52840dk/nrf52840dk-test-kernel/src/: main.rs
boards/configurations/nrf52840dk/nrf52840dk-test-kernel/src/test/: hardware_tests.rs  mod.rs
boards/kernel-test/: README.md
boards/kernel-test/nrf52840dk/: Cargo.toml  Makefile  build.rs  layout.ld
boards/kernel-test/nrf52840dk/.cargo/: config.toml
boards/kernel-test/nrf52840dk/src/: io.rs  main.rs  simple_test.rs  test_launcher.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/test/: macros.rs  mod.rs  mpu.rs  runner.rs
kernel/src/test/hardware/: mod.rs
